# ai_chess

./: .gitignore  Cargo.toml  config.json  default.nix  flake.nix  shell.nix
src/: ai.rs  board.rs  cli.rs  lib.rs  main.rs  perft.rs
src/ai/: abminimax2d.rs  heuristics2d.rs  manual.rs  mod.rs  negamax_mailbox.rs  random2d.rs
src/ai_funcs/: mod.rs
src/ai_funcs/ai_types/: abminimax.rs  abminimax1d.rs  abminimax2d.rs  manual.rs  mod.rs  negamax1d.rs  random.rs
src/ai_funcs/ai_utils/: heuristics.rs  mod.rs
src/board/: array2d.rs  mailbox.rs  mod.rs
src/board_structs/: board.rs  mod.rs
src/board_structs/board_types/: array1d.rs  array2d.rs  bitboard.rs  mailbox.rs  mod.rs
src/structs/: attack_maps.rs  mod.rs
src/utils/: castling.rs  checks.rs  chess_errors.rs  game_move.rs  gamemove1d.rs  gamemove2d.rs  mod.rs  piece_squares.rs  pieces.rs  position.rs
