[package]
name = "ai_chess"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_ai"
crate-type = ["cdylib"]
path = "src/ai.rs"

[[bin]]
name = "ai"
path = "src/ai.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.cpython]
version = "0.7.1"
features = ["extension-module"]
