[package]
name = "ai_chess"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai_chess"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
regex = "1.10.4"
lazy_static = "1.4.0"
