[package]
name = "ai_chess"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai_chess"
path = "src/cli.rs"

[[bin]]
name = "rusty_perft"
path = "src/perft.rs"

[lib]
name = "rusty_chess"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.10.4"
lazy_static = "1.4.0"
snafu = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
